# am-projeto-recomendacao-aula

./: README.md  main.py  pyproject.toml
models/: mlp_model.joblib  regressor_model.joblib
notebooks/: 01_intro_dados.ipynb  04_pandas_etl.ipynb  05_regressao_comparacao.ipynb  grafico_05_notebook.py
scripts/: train_mlp.py  train_regression.py
src/: schemas.py
src/api/v1/: mlp.py  recommendation.py  regression.py  router.py
src/models/: perceptron.py  perceptron_numpy.py
src/services/: data_cleaner.py  feature_engineer.py  mlp_classifier.py  regression_model.py
